--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node ./src/service/service.js",
     "start.dev": "nodemon ./src/service/service.js",
+    "start-front-server": "nodemon ./src/express/index.js",
     "test": "npm run eslint",
     "eslint": "eslint --ext .js src/"
   },
@@ -25,6 +26,7 @@
     "nodemon": "2.0.3"
   },
   "dependencies": {
-    "chalk": "4.0.0"
+    "chalk": "4.0.0",
+    "express": "4.17.1"
   }
 }
