--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "devDependencies": {
     "eslint": "6.8.0",
     "eslint-config-htmlacademy": "0.5.2",
-    "nodemon": "2.0.3"
+    "nodemon": "2.0.3",
+    "pug-lint": "2.6.0"
   },
   "dependencies": {
     "chalk": "4.0.0",
