--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node ./src/service/service.js",
     "start.dev": "nodemon ./src/service/service.js",
     "start-front-server": "nodemon ./src/express/index.js",
-    "test": "npm run eslint",
+    "test": "jest --watchAll",
+    "test::eslint": "npm run eslint",
     "eslint": "eslint --ext .js src/"
   },
   "repository": {
@@ -23,8 +24,10 @@
   "devDependencies": {
     "eslint": "6.8.0",
     "eslint-config-htmlacademy": "0.5.2",
+    "jest": "26.4.2",
     "nodemon": "2.0.3",
-    "pug-lint": "2.6.0"
+    "pug-lint": "2.6.0",
+    "supertest": "4.0.2"
   },
   "dependencies": {
     "chalk": "4.0.0",
