--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chalk": "4.1.0",
     "express": "4.17.1",
     "nanoid": "3.1.12",
+    "pino": "6.7.0",
     "pug": "3.0.0"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "eslint-config-htmlacademy": "0.6.0",
     "jest": "26.5.3",
     "nodemon": "2.0.5",
+    "pino-pretty": "4.3.0",
     "pug-lint": "2.6.0",
     "supertest": "5.0.0"
   }
