--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test": "npm run test::eslint && npm run jest"
   },
   "dependencies": {
+    "axios": "0.21.0",
     "chalk": "4.1.0",
     "cross-env": "7.0.2",
     "express": "4.17.1",
