--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ build/
 # Результат программы
 mocks.json
 
+# Файл с переменными окружения
+.env
+
 # Директория с загруженными изображениями
 src/express/upload/img/*.*
 !src/express/upload/img/.gitkeep
