--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "homepage": "https://github.com/ilyasidorchik/521287-buy-and-sell-3#readme",
   "main": "./src/service/service.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node ./src/service/service.js",
-    "start::debug": "cross-env NODE_ENV=development nodemon ./src/service/service.js",
+    "start": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js",
+    "start::debug": "cross-env NODE_ENV=development nodemon -r dotenv/config ./src/service/service.js",
     "start-front-server": "nodemon ./src/express/index.js",
     "eslint": "npm run eslint",
     "jest": "npm run jest",
@@ -27,11 +27,14 @@
     "axios": "0.21.0",
     "chalk": "4.1.0",
     "cross-env": "7.0.2",
+    "dotenv": "8.2.0",
     "express": "4.17.1",
     "multer": "1.4.2",
     "nanoid": "3.1.12",
+    "pg": "8.5.1",
     "pino": "6.7.0",
-    "pug": "3.0.0"
+    "pug": "3.0.0",
+    "sequelize": "6.3.5"
   },
   "devDependencies": {
     "eslint": "7.11.0",
