--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "test": "npm run test::eslint && npm run jest"
   },
   "dependencies": {
-    "axios": "0.21.0",
     "chalk": "4.1.0",
     "cross-env": "7.0.2",
     "dotenv": "8.2.0",
@@ -34,15 +33,17 @@
     "pg": "8.5.1",
     "pino": "6.7.0",
     "pug": "3.0.0",
-    "sequelize": "6.3.5"
+    "sequelize": "6.4.0"
   },
   "devDependencies": {
+    "axios": "0.21.1",
     "eslint": "7.11.0",
     "eslint-config-htmlacademy": "0.6.0",
     "jest": "26.5.3",
     "nodemon": "2.0.5",
     "pino-pretty": "4.3.0",
     "pug-lint": "2.6.0",
-    "supertest": "5.0.0"
+    "sqlite3": "5.0.0",
+    "supertest": "6.1.1"
   }
 }
