--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "test": "npm run test::eslint && npm run jest"
   },
   "dependencies": {
+    "axios": "0.21.1",
     "chalk": "4.1.0",
     "cross-env": "7.0.2",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "helmet": "4.6.0",
     "joi": "17.4.0",
     "multer": "1.4.2",
     "nanoid": "3.1.12",
@@ -37,7 +39,6 @@
     "sequelize": "6.4.0"
   },
   "devDependencies": {
-    "axios": "0.21.1",
     "eslint": "7.11.0",
     "eslint-config-htmlacademy": "0.6.0",
     "jest": "26.5.3",
