--- a/package.json
+++ b/package.json
@@ -14,9 +14,15 @@
   "homepage": "https://github.com/ilyasidorchik/521287-buy-and-sell-3#readme",
   "main": "./src/service/service.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js",
-    "start::debug": "cross-env NODE_ENV=development nodemon -r dotenv/config ./src/service/service.js",
-    "start-front-server": "nodemon -r dotenv/config ./src/express/index.js",
+    "start": "npm run start-servers",
+    "start::debug": "npm run start-servers::debug",
+    "start-servers": "concurrently \"npm run start-back-server\" \"npm run start-front-server\"",
+    "start-servers::debug": "concurrently \"npm run start-back-server::debug\" \"npm run start-front-server::debug\"",
+    "start-back-server": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js --server",
+    "start-back-server::debug": "cross-env NODE_ENV=development nodemon -r dotenv/config ./src/service/service.js --server",
+    "start-front-server": "node -r dotenv/config ./src/express/index.js",
+    "start-front-server::debug": "nodemon -r dotenv/config ./src/express/index.js",
+    "back-server-cli": "cross-env NODE_ENV=development nodemon -r dotenv/config ./src/service/service.js",
     "eslint": "npm run eslint",
     "jest": "npm run jest",
     "test::rest": "jest --watchAll",
@@ -27,6 +33,7 @@
     "axios": "0.21.1",
     "bcrypt": "5.0.1",
     "chalk": "4.1.0",
+    "concurrently": "6.2.1",
     "connect-session-sequelize": "7.1.1",
     "cross-env": "7.0.2",
     "csurf": "1.11.0",
